# mms-interop

./: .gitignore  COVERAGE.md  Makefile  PLAN.md  README.md  REQUIREMENTS.md  docker-compose.yml  go.mod  static_model.c  static_model.h
.github/workflows/: ci.yml  release.yml  validate-fixtures.yml
adapters/iec61850bean/: Dockerfile  pom.xml
adapters/iec61850bean/src/main/java/org/otfabric/interop/: FixtureValues.java  IedClient.java  IedController.java  IedReporter.java  IedServer.java  JsonLines.java  Main.java
adapters/iec61850bean/src/main/resources/: logback.xml
adapters/libiec61850/: Dockerfile  SPIKE.md
adapters/libiec61850/src/: CMakeLists.txt  fixture.c  fixture.h  ied_client.c  ied_controller.c  ied_reporter.c  ied_server.c  jsonlines.c  jsonlines.h  mms_client.c  mms_server.c
fixtures/: capabilities.json
fixtures/iec61850/: interop.icd  values.json
fixtures/mms/: interop.json
scripts/: smoke-test.sh  validate-fixtures.py
