cmake_minimum_required(VERSION 3.16)
project(libiec61850-adapter C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

# ---------------------------------------------------------------------------
# Paths supplied by Dockerfile (or overridden on the command line)
# ---------------------------------------------------------------------------
set(LIBIEC61850_INCLUDE_DIR "" CACHE PATH  "Installed libiec61850 public headers")
set(LIBIEC61850_PRIVATE_DIR "" CACHE PATH  "libiec61850 source tree (for private headers)")
set(LIBIEC61850_LIB         "" CACHE FILEPATH "libiec61850 static library")
set(LIBIEC61850_HAL_LIB     "" CACHE FILEPATH "libiec61850 HAL static library (libhal.a)")

if(NOT LIBIEC61850_INCLUDE_DIR OR NOT LIBIEC61850_PRIVATE_DIR OR NOT LIBIEC61850_LIB)
    message(FATAL_ERROR
        "Set LIBIEC61850_INCLUDE_DIR, LIBIEC61850_PRIVATE_DIR, LIBIEC61850_LIB and LIBIEC61850_HAL_LIB")
endif()

# Derive HAL lib path from the main lib if not provided explicitly
if(NOT LIBIEC61850_HAL_LIB)
    get_filename_component(_lib_dir "${LIBIEC61850_LIB}" DIRECTORY)
    set(LIBIEC61850_HAL_LIB "${_lib_dir}/libhal.a")
endif()

# ---------------------------------------------------------------------------
# System json-c dependency
# ---------------------------------------------------------------------------
find_package(PkgConfig REQUIRED)
pkg_check_modules(JSONC REQUIRED json-c)

# ---------------------------------------------------------------------------
# Include paths
# ---------------------------------------------------------------------------
# Public installed headers (MmsValue, MmsType, etc.)
# Private source-tree headers (MmsServer_create, MmsDomain_create, etc.)
# Common HAL includes (hal_thread, linked_list, string_utilities, …)
# See adapters/libiec61850/SPIKE.md for rationale.
include_directories(
    ${LIBIEC61850_INCLUDE_DIR}
    ${LIBIEC61850_PRIVATE_DIR}/mms/inc_private
    ${LIBIEC61850_PRIVATE_DIR}/common/inc
    ${LIBIEC61850_PRIVATE_DIR}/iec61850/inc_private
    ${JSONC_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}
)

# ---------------------------------------------------------------------------
# Shared utility sources
# ---------------------------------------------------------------------------
set(COMMON_SRCS
    fixture.c
    jsonlines.c
)

# ---------------------------------------------------------------------------
# libiec61850-mms-server   (Phase 1A Step 1)
# ---------------------------------------------------------------------------
add_executable(libiec61850-mms-server
    mms_server.c
    ${COMMON_SRCS}
)
target_link_libraries(libiec61850-mms-server
    ${LIBIEC61850_LIB}
    ${LIBIEC61850_HAL_LIB}
    ${JSONC_LIBRARIES}
    pthread
    m
)

# ---------------------------------------------------------------------------
# libiec61850-mms-client   (Phase 1B Step 3 — placeholder, compiled empty)
# ---------------------------------------------------------------------------
add_executable(libiec61850-mms-client
    mms_client.c
    ${COMMON_SRCS}
)
target_link_libraries(libiec61850-mms-client
    ${LIBIEC61850_LIB}
    ${LIBIEC61850_HAL_LIB}
    ${JSONC_LIBRARIES}
    pthread
    m
)

# ---------------------------------------------------------------------------
# libiec61850-ied-server   (Phase 2A Step 8)
#
# Uses only the public libiec61850 IED server API — no private header
# dependency. The static IED model is pre-generated by genmodel.py from
# fixtures/iec61850/interop.icd and compiled in as static_model.c.
# ---------------------------------------------------------------------------
add_executable(libiec61850-ied-server
    ied_server.c
    static_model.c
    jsonlines.c
)
# IED server needs public headers only; the private dirs are still required
# here because include_directories() above applies to all targets in the
# project scope — that is acceptable.
target_link_libraries(libiec61850-ied-server
    ${LIBIEC61850_LIB}
    ${LIBIEC61850_HAL_LIB}
    pthread
    m
)

# ---------------------------------------------------------------------------
# libiec61850-ied-client   (Phase 2A Step 8)
#
# Uses the public IedConnection API (iec61850_client.h) — no private headers.
# ---------------------------------------------------------------------------
add_executable(libiec61850-ied-client
    ied_client.c
)
target_link_libraries(libiec61850-ied-client
    ${LIBIEC61850_LIB}
    ${LIBIEC61850_HAL_LIB}
    pthread
    m
)

# ---------------------------------------------------------------------------
# libiec61850-ied-reporter   (Phase 2C)
#
# URCB subscriber: enables urcb01, writes SPS1.stVal to trigger a dchg report,
# waits for the report and emits it as JSON Lines, then disables the URCB.
# Uses the public IedConnection + ClientReportControlBlock API only.
# ---------------------------------------------------------------------------
add_executable(libiec61850-ied-reporter
    ied_reporter.c
)
target_link_libraries(libiec61850-ied-reporter
    ${LIBIEC61850_LIB}
    ${LIBIEC61850_HAL_LIB}
    pthread
    m
)

# ---------------------------------------------------------------------------
# libiec61850-ied-controller   (Phase 2E)
#
# Direct-control client: reads ctlModel, issues Oper on GGIO1.SPCSO1, reads
# back stVal.  Uses public IedConnection + ControlObjectClient API only.
# ---------------------------------------------------------------------------
add_executable(libiec61850-ied-controller
    ied_controller.c
)
target_link_libraries(libiec61850-ied-controller
    ${LIBIEC61850_LIB}
    ${LIBIEC61850_HAL_LIB}
    pthread
    m
)
